<resources>
    <string name="app_name">Chatting App</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register!</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account!</string>
    <string name="log_out">Log out</string>
    <string name="create_a_new_account">Create a new Account !</string>
    <string name="register_title">Register</string>
    <string name="sign_in_to_your_account">Sign in to your account!</string>
    <string name="authentication_failed">Authentication failed! Check if you have entered correct Email and password</string>
    <string name="account_settings">Account Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there I am using Chatting App</string>
    <string name="go_back">Go back</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="change_status">Change Status</string>
    <string name="search">Search</string>
    <string name="profile_image">Profile Image</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
</resources>
