<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/profile_image_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="1"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:background="@android:color/black"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--<View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/users_profile_name" />-->

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:alpha="0.2"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:alpha="0.2"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:alpha="0.2"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_bg"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_bg" />

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:background="@android:color/transparent"
        android:contentDescription="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:elevation="10dp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="3dp"
        app:civ_circle_background_color="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_bg"
        app:layout_constraintVertical_bias="0.51"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/users_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:lines="2"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users_profile_name"
        tools:text="@string/default_status" />


    <Button
        android:id="@+id/change_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/search_button_bg"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:text="@string/change_profile_image"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_status"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/search_button_bg"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:text="@string/change_status"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/change_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="60dp"
        android:background="@drawable/search_outline"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/change_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/change_status" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="212dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/search_outline"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/change_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/change_image" />
</android.support.constraint.ConstraintLayout>