<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/register_layout_toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:srcCompat="@drawable/profile" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_toolbar" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:alpha="0.6"
        android:background="@drawable/main_layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/user_name_reg"
        app:layout_constraintStart_toStartOf="@id/view5"
        app:layout_constraintTop_toTopOf="@id/user_name_reg"
        app:srcCompat="@drawable/ic_person_default" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/email_sign_in"
        app:layout_constraintStart_toStartOf="@id/view5"
        app:layout_constraintTop_toTopOf="@+id/email_sign_in"
        app:srcCompat="@drawable/ic_email_black_24dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/password_sign_in"
        app:layout_constraintStart_toStartOf="@id/view5"
        app:layout_constraintTop_toTopOf="@+id/password_sign_in"
        app:srcCompat="@drawable/ic_vpn_key_black_24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/view5">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textAutoComplete"
            android:textColor="#262a2d" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/user_name_reg">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#262a2d" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_in"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#262a2d" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_sign_in"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/search_button_bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/or_textview"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/view5" />


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="225dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="@+id/submit_sign_in"
        app:layout_constraintEnd_toEndOf="@id/view5"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@id/view5"
        app:layout_constraintTop_toTopOf="@+id/submit_sign_in"
        app:srcCompat="@drawable/search_outline" />


    <TextView
        android:id="@+id/or_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="--------------------------- OR ---------------------------"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/google_sigin_layout"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <RelativeLayout
        android:id="@+id/google_sigin_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline">


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:paddingBottom="6dp"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            app:srcCompat="@drawable/search_button_bg" />


        <ImageView
            android:id="@+id/google_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/search_button_bg"
            android:backgroundTint="@android:color/white"
            app:srcCompat="@drawable/googleg_standard_color_18"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/google_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/google_image"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/google_image"
            android:text="Sign-up with Google"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/google_boundary"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/search_outline" />


    </RelativeLayout>




</android.support.constraint.ConstraintLayout>